--- a/templates/view_products.html
+++ b/templates/view_products.html
@@ -51,7 +51,9 @@
 
             <h3>{{ product[2] }}</h3>
             <p class="price">$ {{ product[3] }}</p>
+            <button type="button"> <a  href="/delete/{{ product[0]}}" class="button3">Delete</a></button>
         </div>
+
         {% endfor %}
     </div>
 
