--- a/templates/consumer.html
+++ b/templates/consumer.html
@@ -43,6 +43,7 @@
 <a href="{{ url_for('business') }}">Switch Account</a>
 <a href="{{ url_for('add_address') }}">Add Address</a>
 <a href="{{ url_for('cart') }}">My Cart</a>
+<a href="{{ url_for('all_order') }}">Your Orders</a>
 <a href="{{ url_for('logout') }}">Logout</a>
 <h1>welcome user:{{ name }}</h1><br><br>
 <div class="container">
@@ -55,6 +56,8 @@
             <p class="price">$ {{ product[3] }}</p>
 
             <button type="button"> <a  href="/add_cart/{{ product[0]}}" class="button3">Add to cart</a></button>
+            <button type="button"> <a  href="/buy/{{ product[0]}}" class="button3">Buy</a></button>
+
         </div>
         {% endfor %}
     </div>
