--- a/templates/register.html
+++ b/templates/register.html
@@ -90,6 +90,11 @@
                 <p>Already have an account?</p>
                 <a href="{{ url_for('login') }}">Login</a>
             </div>
+            <div class="mt-6 text-center">
+            <a href="{{ url_for('home') }}" class="text-blue-600 hover:text-blue-800 font-semibold transition">
+                <i class="fas fa-home"></i> Go to Home
+            </a>
+        </div>
         </div>
     </div>
 
