--- a/templates/view_products.html
+++ b/templates/view_products.html
@@ -64,10 +64,10 @@
 </a>
 
     <!-- Delete Button -->
-    <a href="/remove/{{ product[0] }}" class="mt-4 bg-red-600 text-white px-5 py-3 rounded-md hover:bg-red-700 transition duration-200 transform hover:scale-105 inline-flex items-center justify-center space-x-2">
+    <!--<a href="/remove/{{ product[0] }}" class="mt-4 bg-red-600 text-white px-5 py-3 rounded-md hover:bg-red-700 transition duration-200 transform hover:scale-105 inline-flex items-center justify-center space-x-2">
         <i class="fas fa-trash-alt"></i>
         <span>Delete</span>
-    </a>
+    </a> -->
 </div>
 
                 {% endfor %}
