--- a/templates/add_address.html
+++ b/templates/add_address.html
@@ -43,17 +43,17 @@
         <div class="container mx-auto p-8">
             <h2 class="text-3xl font-bold mb-6">Add Address</h2>
 
-            {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    <div class="mb-6">
-                        {% for category, message in messages %}
-                            <div class="p-4 mb-4 text-white {{ 'bg-green-500' if category == 'success' else 'bg-red-500' }} rounded-lg">
-                                <strong>{{ message }}</strong>
-                            </div>
-                        {% endfor %}
-                    </div>
-                {% endif %}
-            {% endwith %}
+<!--            {% with messages = get_flashed_messages(with_categories=true) %}-->
+<!--                {% if messages %}-->
+<!--                    <div class="mb-6">-->
+<!--                        {% for category, message in messages %}-->
+<!--                            <div class="p-4 mb-4 text-white {{ 'bg-green-500' if category == 'success' else 'bg-red-500' }} rounded-lg">-->
+<!--                                <strong>{{ message }}</strong>-->
+<!--                            </div>-->
+<!--                        {% endfor %}-->
+<!--                    </div>-->
+<!--                {% endif %}-->
+<!--            {% endwith %}-->
 
             <form action="/add_address" method="POST" class="bg-white p-8 rounded-lg shadow-lg">
                 <!-- Street Number and Postal Code -->
