--- a/templates/register.html
+++ b/templates/register.html
@@ -42,18 +42,18 @@
         <div class="login-box">
             <h1>Register</h1>
             <!-- Flash Messages -->
-{% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-        <div class="alert-container">
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            {% endfor %}
-        </div>
-    {% endif %}
-{% endwith %}
+<!--{% with messages = get_flashed_messages(with_categories=true) %}-->
+<!--    {% if messages %}-->
+<!--        <div class="alert-container">-->
+<!--            {% for category, message in messages %}-->
+<!--                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">-->
+<!--                    {{ message }}-->
+<!--                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>-->
+<!--                </div>-->
+<!--            {% endfor %}-->
+<!--        </div>-->
+<!--    {% endif %}-->
+<!--{% endwith %}-->
 
             <form method="post" action="/register" onsubmit="return validateRegistration()">
                 <div class="mb-3 input-group">
